update YArc and add .tmux.conf

--- a/bashrc/.YArc
+++ b/bashrc/.YArc
@@ -6,6 +6,7 @@ alias gct='git checkout'
 alias gctm='git checkout master'
 alias gpl='git pull'
 alias gp='git push'
+alias gpft='gp --follow-tags'
 alias gd='git diff'
 alias gbr='git branch'
 alias gla='git log --all --decorate --oneline --graph'
