add install.sh and new bashrc

--- a/bashrc/.YArc
+++ b/bashrc/.YArc
@@ -3,7 +3,7 @@ alias gst='git status'
 alias gcm='git commit'
 alias gcma='git commit --amend'
 alias gct='git checkout'
-alias gctm='git checkout master'
+alias gm='git checkout master'
 alias gpl='git pull'
 alias gp='git push'
 alias gpft='gp --follow-tags'
