update vim setting and source

--- a/bashrc/.YArc
+++ b/bashrc/.YArc
@@ -58,3 +58,33 @@ alias ..="cd .."
 alias ...="cd ../.."
 alias ....="cd ../../.."
 alias .....="cd ../../../.."
+
+# let vim not to open new file if file does not exist.
+vim() {
+    local args=("$@")
+    local new=0
+
+    # Check for `--new'.
+    for ((i = 0; i < ${#args[@]}; ++i)); do
+        if [[ ${args[$i]} = --new ]]; then
+            new=1
+            unset args[$i]   # Don't pass '--new' to vim.
+        fi
+    done
+
+    if ! (( new )); then
+        for file in "${args[@]}"; do
+            [[ $file = -* ]] && continue   # Ignore options.
+
+            if ! [[ -e $file ]]; then
+                printf '%s: cannot access %s: No such file or directory\n' "$FUNCNAME" "$file" >&2
+                return 1
+            fi
+        done
+    fi
+
+    # Use `command' to invoke the vim binary rather than this function.
+    command "$FUNCNAME" "${args[@]}"
+}
+
+alias vn='vim --new'
