gp --force -> gp --force-with-lease

--- a/bashrc/.YArc
+++ b/bashrc/.YArc
@@ -29,8 +29,8 @@ alias gclean='git stash && git stash drop'
 alias grbm='git rebase master'
 alias grbc='git rebase --continue'
 alias grb='git rebase'
-alias gcpf='gcma --no-edit && gp -f'
-alias gpf='gp -f'
+alias gcpf='gcma --no-edit && gp --force-with-lease'
+alias gpf='gp --force-with-lease'
 
 alias av='cd $HOME/Project/PPAV'
 alias gj='cd $HOME/Project/WorkTimeSurvey-backend'
