--- a/bashrc/.YArc
+++ b/bashrc/.YArc
@@ -66,7 +66,7 @@ vim() {
 
     # Check for `--new'.
     for ((i = 0; i < ${#args[@]}; ++i)); do
-        if [[ ${args[$i]} = --new ]]; then
+        if [[ ${args[$i]} = --new || ${args[$i]} = -n ]]; then
             new=1
             unset args[$i]   # Don't pass '--new' to vim.
         fi
