--- a/bashrc/.YArc
+++ b/bashrc/.YArc
@@ -40,7 +40,7 @@ alias yck='yarn upgrade-interactive --latest'
 
 # Add git branch if its present to PS1
 ## https://github.com/jonmosco/kube-ps1
-source $HOME/Project/kube-ps1.sh
+source $HOME/Project/note/kube-ps1.sh
 color_prompt=yes
 parse_git_branch() {
  git branch 2> /dev/null | sed -e '/^[^*]/d' -e 's/* \(.*\)/(\1)/'
@@ -96,7 +96,7 @@ function vim() {
 }
 
 # https://github.com/junegunn/fzf
-export FZF_DEFAULT_OPTS='--height 40% --layout=reverse --border'
+export FZF_DEFAULT_OPTS='--height 40% --layout=reverse --border -q !node_modules\ '
 alias v='vim $(fzf)'
 alias vv='vim'
 alias vn='vim --new'
@@ -116,7 +116,7 @@ function helm() {
     $(which helm) "$@"
 }
 
-function hd() {
+function h() {
     if [[ "$1" == "upgrade" ]] && [[ "$@" != *"--help"* ]]
     then
         helm repo update
@@ -124,7 +124,10 @@ function hd() {
     $(which helm) --tiller-namespace default "$@"
 }
 
+export EDITOR=vim
+
 alias k='kubectl'
+alias kp='kubectl get po'
 complete -o default -o nospace -F __start_kubectl k
 alias kube='$HOME/.local/bin/kube-shell'
 
