--- a/.gitconfig
+++ b/.gitconfig
@@ -17,10 +17,7 @@
     pr-clean = "!git for-each-ref refs/heads/pr/* --format='%(refname)' | while read ref ; do branch=${ref#refs/heads/} ; git branch -D $branch ; done"
 [core]
     excludesfile = ~/.gitignore
-    ; pager = ~/yoctol/diff-so-fancy/diff-so-fancy | less --tabs=4 -RFX
 [push]
     default = current
-; [color]
-;     ui = true
-; [diff-so-fancy]
-;     markEmptyLines = false
+[pager]
+	branch = false
