--- a/.gitconfig
+++ b/.gitconfig
@@ -7,9 +7,6 @@
     cm = commit
     p = push
 
-    up = "!f() { git checkout master; \
-        git pull; \
-        git remote update --prune; }; f"
     upst = "!f() { git checkout $1; \
         git pull upstream $1; \
         git remote update --prune; }; f"
@@ -17,6 +14,7 @@
     pr-clean = "!git for-each-ref refs/heads/pr/* --format='%(refname)' | while read ref ; do branch=${ref#refs/heads/} ; git branch -D $branch ; done"
 [core]
     excludesfile = ~/.gitignore
+    pager = delta
 [push]
     default = current
 [pager]
@@ -26,3 +24,18 @@
     smudge = git-lfs smudge -- %f
     process = git-lfs filter-process
     required = true
+
+# delta config
+[interactive]
+    diffFilter = delta --color-only
+
+[delta]
+    navigate = true  # use n and N to move between diff sections
+    side-by-side = true
+
+[merge]
+    conflictstyle = diff3
+
+[diff]
+    colorMoved = default
+
