--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,7 +1,7 @@
 {
     "yaml.validate": false,
     "python.formatting.provider": "black",
-    "coc.preferences.formatOnSaveFiletypes": ["python", "javascript"],
+    "coc.preferences.formatOnSaveFiletypes": ["python", "javascript", "terraform"],
     "languageserver": {
         "terraform": {
             "command": "terraform-ls",
