--- a/.gitconfig
+++ b/.gitconfig
@@ -31,7 +31,8 @@
 
 [delta]
     navigate = true  # use n and N to move between diff sections
-    side-by-side = true
+    line-numbers = true
+    ; side-by-side = true # disable this for lazygit diff
 
 [merge]
     conflictstyle = diff3
